[package]
name = "windows_hook"
version = "0.1.0"
edition = "2024"
authors = ["Austin Stanley <maxtmahem@gmail.com>"]
description = "Safe Win32 hook wrappers with automatic removal."
license = "MIT"
repository = "https://github.com/MaxMahem/windows_hook"
readme = "README.md"
keywords = ["windows", "hook", "win32", "interop"]
categories = ["os::windows-apis", "api-bindings"]
# documentation = "https://docs.rs/windows_hook"
homepage = "https://github.com/MaxMahem/windows_hook"


[dependencies]
winsafe = { version = "0.0.26", features = ["user"] }
fluent_result = { git = "https://github.com/MaxMahem/fluent_result.git" }

# Optional dependency on tracing
tracing = { version = "0.1", optional = true }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "is_variant"] }
tap = "1.0.1"

[features]
default = []
tracing = ["dep:tracing"]
